fetching Database version 5